<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/poster" />
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/movie_name"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/date" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/lorem" />

</RelativeLayout>