<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MovieDetail">

        <android.support.v7.widget.Toolbar
            android:id="@+id/mytollbar"
            app:title="Movie Catalogue"
            app:titleTextColor="#ffffff"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"/>

        <LinearLayout
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingTop="@dimen/vertical"
            android:paddingLeft="@dimen/horizontal"
            android:paddingBottom="@dimen/vertical"
            android:paddingRight="@dimen/horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="130dp"
                android:scaleType="fitXY"
                android:layout_height="150dp"
                android:contentDescription="@string/poster" />

            <LinearLayout
                android:paddingStart="@dimen/horizontal"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/title"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateDetail"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:paddingTop="@dimen/vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/director"/>

                        <TextView
                            android:paddingTop="8dp"
                            android:id="@+id/dir1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/director"/>

                        <TextView
                            android:paddingTop="8dp"
                            android:id="@+id/dir2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/director"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_marginStart="30dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:paddingTop="@dimen/vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/screen_play"/>

                        <TextView
                            android:paddingTop="8dp"
                            android:id="@+id/sp1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/screen_play"/>

                        <TextView
                            android:paddingTop="8dp"
                            android:id="@+id/sp2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/screen_play"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="@dimen/horizontal"
            android:text="@string/actor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/horizontal"
            android:paddingTop="@dimen/vertical"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/actor1"
                    android:layout_width="80dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/photoactor" />

                <TextView
                    android:id="@+id/nameActor1"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/nameactor1"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/actor2"
                    android:layout_width="80dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/photoactor" />

                <TextView
                    android:id="@+id/nameActor2"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/nameactor2"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/actor3"
                    android:layout_width="80dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/photoactor" />

                <TextView
                    android:id="@+id/nameActor3"
                    android:text="@string/nameactor3"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="#8653d4ff"
            android:layout_gravity="center"
            android:padding="@dimen/vertical"
            android:layout_marginStart="@dimen/horizontal"
            android:layout_marginEnd="@dimen/horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/overview"/>

            <TextView
                android:layout_marginTop="@dimen/vertical"
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>